# the-new-bi-portal

./: .dockerignore  .env.example  .gitignore  README.md  dev-up.cmd  docker-compose.test.yml  docker-compose.yml  redis-down.cmd  redis-up.cmd
PBI_SERVER_MONITORING/: .env.bip.example  .env.example  .gitignore  README.bip.md  README.md  docker-compose.bip.yml  docker-compose.test.yml  docker-compose.yml
PBI_SERVER_MONITORING/backend/: .gitkeep  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
PBI_SERVER_MONITORING/backend/app/: __init__.py  main.py
PBI_SERVER_MONITORING/backend/app/api/routes/: __init__.py  collect.py  datasets.py  health.py  refresh.py  reports.py  schedules.py  summary.py
PBI_SERVER_MONITORING/backend/app/core/: __init__.py  config.py  constants.py  deps.py  errors.py  logging.py  timezone.py
PBI_SERVER_MONITORING/backend/app/db/: __init__.py  base.py  redis.py  session.py
PBI_SERVER_MONITORING/backend/app/migrations/: env.py
PBI_SERVER_MONITORING/backend/app/migrations/versions/: 0001_initial.py
PBI_SERVER_MONITORING/backend/app/models/: __init__.py  dataset.py  refresh_run.py  refresh_schedule.py  report.py  workspace.py
PBI_SERVER_MONITORING/backend/app/schemas/: __init__.py  common.py  dataset.py  refresh.py  report.py  schedule.py
PBI_SERVER_MONITORING/backend/app/services/: __init__.py  cache.py  collect_dispatch.py  refresh_query.py  summary.py
PBI_SERVER_MONITORING/backend/app/services/powerbi/: client.py  collector.py  lock.py  status_mapper.py  token_service.py
PBI_SERVER_MONITORING/backend/app/workers/: __init__.py  beat_schedule.py  celery_app.py
PBI_SERVER_MONITORING/backend/app/workers/tasks/: __init__.py  collect.py
(+330 files in other folders)
